adf agent initialization using Java Reflection is added. adf config directory is added. data directory for adf agents are added. concurrency problem between command collector and agent proxy is solved using the synchronized access to the list of commands